fixed the floating footer on mobile in work and contact pages

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,3 +1,7 @@
+.container {
+  height: 100vh;
+}
+
 .heading img {
   height: 100%;
   width: 600px;
