--- a/src/components/Work.module.css
+++ b/src/components/Work.module.css
@@ -1,5 +1,5 @@
-.heading {
-  height: 100%;
+.container {
+  height: 100vh;
 }
 
 .heading img {
@@ -14,6 +14,5 @@
 @media (max-width: 700px) {
   .heading img {
     width: 100%;
-    height: 100%;
   }
 }
